@@ -1,10 +1,15 @@
 package com.spring.jwt.SparePart;
 
+import com.spring.jwt.MapperClasses.SparePartMappers;
+import com.spring.jwt.VehicleReg.BadRequestException;
+import com.spring.jwt.exception.SparePartNotFoundException;
 import com.spring.jwt.utils.BaseResponseDTO;
 import com.spring.jwt.utils.ImageCompressionUtil;
+import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import org.springframework.dao.DataIntegrityViolationException;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 
@@ -52,9 +57,12 @@ public class SparePartServiceImpl implements SparePartService {
             sparePartRepo.save(sparePart);
             return new BaseResponseDTO("Success", "Part Added Successfully");
 
+        } catch (DataIntegrityViolationException e) {
+            logger.error("Duplicate part number error: ", e);
+            throw new BadRequestException("Part number " + partNumber + " already exists.");
         } catch (RuntimeException e) {
             logger.error("Error processing images: ", e);
-            return new BaseResponseDTO("Error", "Failed to process images");
+            throw new BadRequestException("Failed to process images");
         }
     }
 
@@ -80,20 +88,9 @@ public class SparePartServiceImpl implements SparePartService {
     @Override
     public List<SparePartDto> getAllSpareParts() {
         List<SparePart> spareParts = sparePartRepo.findAll();
-
-        return spareParts.stream().map(sparePart -> SparePartDto.builder()
-                .sparePartId(sparePart.getSparePartId())
-                .partName(sparePart.getPartName())
-                .description(sparePart.getDescription())
-                .manufacturer(sparePart.getManufacturer())
-                .price(sparePart.getPrice())
-                .partNumber(sparePart.getPartNumber())
-                .updateAt(sparePart.getUpdateAt())
-                .photo(sparePart.getPhoto().stream()
-                        .map(photo -> Base64.getEncoder().encodeToString(photo))
-                        .toList())
-                .build()
-        ).collect(Collectors.toList());
+        return spareParts.stream()
+                .map(SparePartMappers::toDto)
+                .collect(Collectors.toList());
     }
 
     @Override
@@ -109,6 +106,7 @@ public class SparePartServiceImpl implements SparePartService {
 
         if (photos != null && !photos.isEmpty()) {
             try {
+                // Compress new photos
                 List<byte[]> compressedPhotos = photos.stream()
                         .map(file -> {
                             try {
@@ -127,7 +125,13 @@ public class SparePartServiceImpl implements SparePartService {
 
                 logger.info("Number of compressed photos: {}", compressedPhotos.size());
 
-                sparePart.setPhoto(new ArrayList<>(compressedPhotos));
+
+                List<byte[]> existingPhotos = sparePart.getPhoto();
+                if (existingPhotos == null) {
+                    existingPhotos = new ArrayList<>();
+                }
+                existingPhotos.addAll(compressedPhotos);
+                sparePart.setPhoto(existingPhotos);
             } catch (Exception e) {
                 logger.error("Failed to upload images", e);
                 throw new RuntimeException("Failed to upload images", e);
@@ -140,19 +144,37 @@ public class SparePartServiceImpl implements SparePartService {
 
         logger.info("Updated spare part: {}", updatedPart);
 
-        return SparePartDto.builder()
-                .sparePartId(updatedPart.getSparePartId())
-                .partName(updatedPart.getPartName())
-                .description(updatedPart.getDescription())
-                .manufacturer(updatedPart.getManufacturer())
-                .price(updatedPart.getPrice())
-                .partNumber(updatedPart.getPartNumber())
-                .updateAt(updatedPart.getUpdateAt())
-                .photo(updatedPart.getPhoto().stream()
-                        .map(photo -> Base64.getEncoder().encodeToString(photo))
-                        .toList())
-                .build();
+        return sparePartMapper.toDto(updatedPart);
     }
+    @Override
+    public BaseResponseDTO deleteSparePartById(Integer id, Integer photoIndex) {
+        return sparePartRepo.findById(id)
+                .map(sparePart -> {
+                    if (photoIndex != null) {
+
+                        List<byte[]> photos = sparePart.getPhoto();
+                        if (photoIndex >= 0 && photoIndex < photos.size()) {
+                            photos.remove(photoIndex.intValue());
+                            sparePart.setPhoto(photos);
+                            sparePartRepo.save(sparePart);
+                            return BaseResponseDTO.builder()
+                                    .code("SUCCESS")
+                                    .message("Photo deleted successfully")
+                                    .build();
+                        } else {
+                            throw new IllegalArgumentException("Invalid photo index: " + photoIndex);
+                        }
+                    } else {
+                        sparePartRepo.deleteById(id);
+                        return BaseResponseDTO.builder()
+                                .code("SUCCESS")
+                                .message("Spare part deleted successfully")
+                                .build();
+                    }
+                })
+                .orElseThrow(() -> new SparePartNotFoundException("Not found with ID: " + id));
+    }
+
 
 
 }
